login modal new version

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,6 +15,7 @@
 @import "../view/components/Paypal/paypal.scss";
 @import "../view/components/Slideshows/slideshows.scss";
 @import "../view/components/SearchFilter/searchfilter.scss";
+@import "../view/components/Separator/separator.scss";
 
 @import "../view/pages/Home/home.scss";
 @import "../view/pages/Product/product.scss";
